+ Fixed brick furnace drops + Added Jade Compat

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,6 @@ mod_description=A crappy rewrite of the HBM's Nuclear Tech Mod, A mod that adds 
 
 ## Dependency Properties
 jei_version=19.21.0.247
-jade_id=5846105
+jade_version=15.10.3+neoforge
 spark_id=5759671
 patchouli_version_id=6164617
