--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.dev"
     }
+
+    maven { url = "https://api.modrinth.com/maven" }
 }
 
 base {
@@ -132,15 +134,17 @@ configurations {
 }
 
 dependencies {
+    // Required Dependencies
+    localRuntime "curse.maven:patchouli-306770:${patchouli_version_id}"
+
     // Optional Dependencies
     // compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
     compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
+    implementation "maven.modrinth:jade:${project.jade_version}"
 
     // Runtime only mods
     localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
-    localRuntime "curse.maven:jade-324717:${jade_id}"
-    localRuntime "curse.maven:spark-361579:${spark_id}"
-    localRuntime "curse.maven:patchouli-306770:${patchouli_version_id}"
+    //localRuntime "curse.maven:spark-361579:${spark_id}"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
